test_suite/alan-2022-examples/failing/007290_mutation.alan
source c58wa begin put "" call "" end
